--- a/Web/Client/tsconfig.json
+++ b/Web/Client/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "out": "./Web/Client/Public/main.js",
-    "listFiles": true
+    "target": "ES6",
+    "out": "./Web/Client/Public/main-es6.js",
+    "listFiles": true,
+    "experimentalDecorators": true
   }
 }
