--- a/Web/Server/project.json
+++ b/Web/Server/project.json
@@ -11,7 +11,8 @@
     "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
     "Newtonsoft.Json": "7.0.1",
-    "FluentValidation": "5.6.2.0"
+    "FluentValidation": "5.6.2.0",
+    "NLog.Config": "4.0.1",
   },
   "commands": {
     "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
