--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,7 @@
 <configuration>
     <packageSources>
         <!--add key="AspNetVNext" value="https://www.myget.org/F/AspNetVNext/api/v2" /-->
+        <add key="AspNetRC1" value="https://www.myget.org/F/aspnetrc1/api/v2/" />
         <add key="NuGet.org" value="https://nuget.org/api/v2/" />
     </packageSources>
     <packageSourceCredentials>
