--- a/Web/Server/project.json
+++ b/Web/Server/project.json
@@ -5,19 +5,19 @@
     "wwwroot"
   ],
   "dependencies": {
-    "Kestrel": "1.0.0-beta5",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-beta5",
-    "Microsoft.AspNet.Mvc": "6.0.0-beta5",
-    "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+    "Microsoft.Framework.Logging.Console": "1.0.0-beta8",
     "Newtonsoft.Json": "7.0.1",
     "FluentValidation": "5.6.2.0",
-    "NLog.Config": "4.0.1"
+    "NLog.Config": "4.2.0"
   },
   "commands": {
-    "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
+    "kestrel": "Microsoft.AspNet.Server.Kestrel --server.urls http://*:5004"
   },
   "frameworks": {
-    "dnx451": {}
+    "dnxcore50": {}
   }
 }
