--- a/Web/Client/tsconfig.json
+++ b/Web/Client/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es5",
     "out": "./Web/Client/Public/main.js",
     "listFiles": true,
     "experimentalDecorators": true,
